--- a/hsy-resources/pom.xml
+++ b/hsy-resources/pom.xml
@@ -2,23 +2,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>hsy-parent</artifactId>
-        <groupId>fi.hsy.oskari</groupId>
+		<groupId>fi.hsy.oskari</groupId>
+		<artifactId>hsy-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>hsy-resources</artifactId>
     <packaging>jar</packaging>
-    <name>Resources for HSY applications</name>
-
-    <build>
-        <resources>
-            <resource>
-                <directory>resources</directory>
-            </resource>
-        </resources>
-    </build>
+    <name>Resources for application</name>
+    <dependencies>
+        <dependency>
+            <groupId>fi.nls.oskari</groupId>
+            <artifactId>content-resources</artifactId>
+            <version>${oskari.version}</version>
+        </dependency>
+    </dependencies>
 </project>
