--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,14 @@
   
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <oskari.version>1.32.0</oskari.version>
-    <commons-dbcp2.version>2.0.1</commons-dbcp2.version>
-    <postgresql.version>9.3-1102-jdbc41</postgresql.version>
-    <java.version>1.7</java.version>
-    <junit.version>4.11</junit.version>
-    <slf4j.version>1.7.12</slf4j.version>
+      <oskari.version>1.32.0</oskari.version>
+      <commons-dbcp2.version>2.0.1</commons-dbcp2.version>
+      <postgresql.version>9.3-1102-jdbc41</postgresql.version>
+      <java.version>1.7</java.version>
+      <junit.version>4.11</junit.version>
+      <slf4j.version>1.7.12</slf4j.version>
+      <javax.mail.version>1.4.7</javax.mail.version>
+      <commons-email.version>1.1</commons-email.version>
    </properties>
    
    <repositories>
