Oskari configuration and userguides

--- a/server-extension/pom.xml
+++ b/server-extension/pom.xml
@@ -28,6 +28,11 @@
           <version>${commons-email.version}</version>
       </dependency>
 
+	  <dependency>
+          <groupId>fi.nls.oskari.service</groupId>
+          <artifactId>oskari-search-nls</artifactId>
+          <version>${oskari.version}</version>
+       </dependency>
 
 
       <dependency>
