--- a/webapp-map/pom.xml
+++ b/webapp-map/pom.xml
@@ -62,6 +62,12 @@
             </exclusions>
         </dependency>
 
+		<dependency>
+           <groupId>fi.nls.oskari.service</groupId>
+           <artifactId>oskari-search-nls</artifactId>
+           <version>${oskari.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>fi.nls.oskari</groupId>
             <artifactId>service-logging</artifactId>
