pom fixes and modified jsp according to migration guide

--- a/server-extension/pom.xml
+++ b/server-extension/pom.xml
@@ -29,10 +29,10 @@
       </dependency>
 
 	  <dependency>
-          <groupId>fi.nls.oskari.service</groupId>
-          <artifactId>oskari-search-nls</artifactId>
-          <version>${oskari.version}</version>
-       </dependency>
+			<groupId>fi.nls.oskari.extras</groupId>
+			<artifactId>oskari-search-nls</artifactId>
+			<version>2.1</version>
+	    </dependency>
 
 
       <dependency>
