--- a/webapp-map/pom.xml
+++ b/webapp-map/pom.xml
@@ -70,10 +70,10 @@
         </dependency>
 
 		<dependency>
-           <groupId>fi.nls.oskari.service</groupId>
-           <artifactId>oskari-search-nls</artifactId>
-           <version>${oskari.version}</version>
-        </dependency>
+			<groupId>fi.nls.oskari.extras</groupId>
+			<artifactId>oskari-search-nls</artifactId>
+			<version>2.1</version>
+		</dependency>
 
         <dependency>
             <groupId>fi.nls.oskari</groupId>
