--- a/pom.xml
+++ b/pom.xml
@@ -9,17 +9,12 @@
   <packaging>pom</packaging>
   <name>HSY applications</name>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-      <oskari.version>1.50.0</oskari.version>
-      <commons-dbcp2.version>2.0.1</commons-dbcp2.version>
-      <postgresql.version>9.3-1102-jdbc41</postgresql.version>
-      <java.version>1.7</java.version>
-      <junit.version>4.11</junit.version>
-      <slf4j.version>1.7.12</slf4j.version>
-      <javax.mail.version>1.4.7</javax.mail.version>
-      <commons-email.version>1.1</commons-email.version>
-   </properties>
+    <properties>
+        <oskari.version>1.50.0</oskari.version>
+
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>1.8</java.version>
+    </properties>
 
    <repositories>
         <repository>
@@ -34,20 +29,33 @@
         </repository>
     </repositories>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>fi.nls.oskari</groupId>
+                <artifactId>oskari-parent</artifactId>
+                <version>${oskari.version}</version>
+                <scope>import</scope>
+                <type>pom</type>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <version>3.7.0</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                 </configuration>
             </plugin>
+
             <plugin>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>2.4</version>
+                <version>3.2.2</version>
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
