--- a/server-extension/pom.xml
+++ b/server-extension/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>fi.hsy.oskari</groupId>
     <artifactId>hsy-parent</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1.0</version>
   </parent>
   
   <artifactId>server-extension</artifactId>
