--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <name>HSY applications</name>
 
     <properties>
-        <oskari.version>1.54.1</oskari.version>
+        <oskari.version>1.55.0-SNAPSHOT</oskari.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
