--- a/hsy-resources/pom.xml
+++ b/hsy-resources/pom.xml
@@ -6,21 +6,15 @@
     <parent>
 		<groupId>fi.hsy.oskari</groupId>
 		<artifactId>hsy-parent</artifactId>
-        <version>1.5.3</version>
+        <version>1.6.0-SNAPSHOT</version>
     </parent>
     <artifactId>hsy-resources</artifactId>
     <packaging>jar</packaging>
     <name>Resources for application</name>
     <dependencies>
         <dependency>
-            <groupId>fi.nls.oskari</groupId>
-            <artifactId>content-resources</artifactId>
-            <version>${oskari.version}</version>
-        </dependency>
-        <dependency>
             <groupId>org.oskari</groupId>
-            <artifactId>service-capabilities-update</artifactId>
-            <version>1.55.1</version>
+            <artifactId>content-resources</artifactId>
         </dependency>
         <dependency>
             <groupId>org.oskari</groupId>
