--- a/server-extension/pom.xml
+++ b/server-extension/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>fi.hsy.oskari</groupId>
     <artifactId>hsy-parent</artifactId>
-    <version>1.5.3</version>
+    <version>1.6.0-SNAPSHOT</version>
   </parent>
   
   <artifactId>server-extension</artifactId>
@@ -11,8 +11,8 @@
   
   <dependencies>
       <dependency>
-          <groupId>fi.nls.oskari.service</groupId>
-          <artifactId>oskari-control-base</artifactId>
+          <groupId>org.oskari</groupId>
+          <artifactId>control-base</artifactId>
       </dependency>
 
 
