--- a/webapp-map/pom.xml
+++ b/webapp-map/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>hsy-parent</artifactId>
         <groupId>fi.hsy.oskari</groupId>
-        <version>1.5.3</version>
+        <version>1.6.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -41,14 +41,14 @@
 
         <!-- oskari -->
         <dependency>
-            <groupId>fi.nls.oskari.service</groupId>
-            <artifactId>oskari-control-example</artifactId>
+            <groupId>org.oskari</groupId>
+            <artifactId>control-example</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>fi.nls.oskari.service</groupId>
-            <artifactId>oskari-control-admin</artifactId>
-        </dependency>
+		<dependency>
+			<groupId>org.oskari</groupId>
+			<artifactId>control-admin</artifactId>
+		</dependency>
 
         <dependency>
             <groupId>org.oskari</groupId>
@@ -56,12 +56,12 @@
         </dependency>
 
         <dependency>
-            <groupId>fi.nls.oskari.service</groupId>
-            <artifactId>oskari-control-myplaces</artifactId>
+            <groupId>org.oskari</groupId>
+            <artifactId>control-myplaces</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>fi.nls.oskari</groupId>
+            <groupId>org.oskari</groupId>
             <artifactId>servlet-map</artifactId>
             <exclusions>
                 <exclusion>
@@ -72,22 +72,24 @@
         </dependency>
 
         <dependency>
-            <groupId>fi.nls.oskari.extras</groupId>
-            <artifactId>oskari-search-nls</artifactId>
-            <version>2.1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>fi.nls.oskari</groupId>
+            <groupId>org.oskari</groupId>
             <artifactId>service-logging</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>fi.nls.oskari</groupId>
+            <groupId>org.oskari</groupId>
             <artifactId>download-basket</artifactId>
         </dependency>
 
         <!-- /oskari -->
+        <!-- nls-fi oskari extras -->
+        <dependency>
+            <groupId>fi.nls.oskari.extras</groupId>
+            <artifactId>oskari-search-nls</artifactId>
+            <version>3.7.0</version>
+        </dependency>
+        <!-- /nls-fi oskari extras -->
+
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
