--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>fi.hsy.oskari</groupId>
   <artifactId>hsy-parent</artifactId>
-  <version>1.6.0</version>
+  <version>1.7.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>HSY applications</name>
 
     <properties>
-        <oskari.version>2.9.0-1</oskari.version>
+        <oskari.version>2.12.0</oskari.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
