--- a/hsy-resources/pom.xml
+++ b/hsy-resources/pom.xml
@@ -6,7 +6,7 @@
     <parent>
 		<groupId>fi.hsy.oskari</groupId>
 		<artifactId>hsy-parent</artifactId>
-        <version>1.7.0-SNAPSHOT</version>
+        <version>1.7.0</version>
     </parent>
     <artifactId>hsy-resources</artifactId>
     <packaging>jar</packaging>
