--- a/webapp-map/pom.xml
+++ b/webapp-map/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>hsy-parent</artifactId>
         <groupId>fi.hsy.oskari</groupId>
-        <version>1.7.0-SNAPSHOT</version>
+        <version>1.7.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
